@@ -3,6 +3,12 @@
 	* iolint.awk, iolint.ok: Remove |& test to cat. It was
 	inherently racy.
 
+	Unrelated:
+
+	* Makefile.am (diffout): Switch to `diff -u' since Busybox
+	doesn't support the old -c option. Thanks to Nelson Beebe for
+	the report.
+
 2020-10-01         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* iolint.awk, iolint.ok: Adjust output to cat for exit status
